Don't create new Boolean
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@360285 13f79535-47bb-0310-9956-ffa450edef68